[gd_scene load_steps=5 format=3 uid="uid://cqy0ge72v1ojj"]

[ext_resource type="Script" path="res://scriptkitties/frankthecat/FrankFuncCardOverhead.gd" id="1_bpgyl"]
[ext_resource type="PackedScene" uid="uid://61r7s2d0wbxx" path="res://main/RectangleComponent.tscn" id="2_lej2i"]
[ext_resource type="PackedScene" uid="uid://c1f1rpvdv7f4u" path="res://scriptkitties/AbilityFuncCall.tscn" id="3_fdsom"]
[ext_resource type="PackedScene" uid="uid://c1baw1f6j4fvx" path="res://main/ComponentContainer.tscn" id="3_l3t6x"]

[node name="FrankFuncCardOverhead" type="Node2D"]
script = ExtResource("1_bpgyl")

[node name="RectangleComponent" parent="." instance=ExtResource("2_lej2i")]
color = Color(1, 1, 1, 1)

[node name="ComponentContainer" parent="." instance=ExtResource("3_l3t6x")]
position = Vector2(25, 25)

[node name="func1" parent="ComponentContainer" instance=ExtResource("3_fdsom")]
visible = false

[node name="func2" parent="ComponentContainer" instance=ExtResource("3_fdsom")]
visible = false
position = Vector2(0, 40)

[node name="func3" parent="ComponentContainer" instance=ExtResource("3_fdsom")]
visible = false
position = Vector2(0, 80)

[node name="func4" parent="ComponentContainer" instance=ExtResource("3_fdsom")]
visible = false
position = Vector2(0, 120)
